--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="interests.html">Interests</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
+       <li><a href="invitation.html">Invitation</a></li>
     </ul>
   </nav>
 
